--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "jssip": "^3.10.0"
+    "jssip": "^3.10.0",
+    "p-iteration": "^1.1.8"
   }
 }
