--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opensips-js",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "The JS package for opensips",
   "default": "src/index.ts",
   "main": "build/index.js",
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/VoicenterTeam/opensips-js#readme",
   "devDependencies": {
+    "@parcel/config-default": "^2.8.3",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
@@ -38,9 +39,8 @@
     "parcel": "^2.8.3",
     "pre-commit": "^1.2.2",
     "process": "^0.11.10",
-    "rollup": "^3.22.0",
-    "rollup-plugin-typescript2": "^0.34.1",
     "tsc-alias": "^1.8.6",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
