--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "opensips-js",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "The JS package for opensips",
   "default": "src/index.ts",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
-    "dev": "parcel demo/index.html --https",
+    "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-check": "tsc --noEmit",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts --fix --ignore-path .gitignore"
@@ -29,19 +29,16 @@
   },
   "homepage": "https://github.com/VoicenterTeam/opensips-js#readme",
   "devDependencies": {
-    "@parcel/config-default": "^2.8.3",
-    "@rollup/plugin-node-resolve": "^15.0.2",
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
-    "parcel": "^2.8.3",
     "pre-commit": "^1.2.2",
     "process": "^0.11.10",
+    "typescript": "^4.9.5",
     "tsc-alias": "^1.8.6",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^4.9.5"
+    "vite": "^4.3.8"
   },
   "dependencies": {
     "generate-unique-id": "^2.0.1",
