--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "eslint": "^8.35.0",
     "pre-commit": "^1.2.2",
     "process": "^0.11.10",
-    "typescript": "^4.9.5",
+    "regenerator-runtime": "^0.13.11",
     "tsc-alias": "^1.8.6",
+    "typescript": "^4.9.5",
     "vite": "^4.3.8"
   },
   "dependencies": {
