--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
     "pre-commit": "^1.2.2",
@@ -41,7 +42,9 @@
     "regenerator-runtime": "^0.13.11",
     "tsc-alias": "^1.8.6",
     "typescript": "^4.9.5",
-    "vite": "^4.3.8"
+    "vite": "^4.3.8",
+    "vite-plugin-singlefile": "^0.13.5",
+    "vue": "3.2.25"
   },
   "dependencies": {
     "generate-unique-id": "^2.0.1",
