--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,8 @@
   "repository": "/opensips-js",
   "scripts": {
     "dev": "node scripts/prebuild.js && vuepress dev src",
-    "build": "node scripts/prebuild.js && vuepress build src"
+    "build": "vuepress build src",
+    "prebuild": "node scripts/prebuild.js"
   },
   "license": "MIT",
   "devDependencies": {
