--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "npm": "please-use-yarn",
     "yarn": ">= 1.22.4"
   },
-  "precommit": "ts-check, lint",
+//  "precommit": "ts-check, lint",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/VoicenterTeam/opensips-js.git"
