--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voicenter-team/opensips-js",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "The JS package for opensips",
   "default": "src/index.ts",
   "main": "build/index.js",
@@ -42,7 +42,7 @@
     "regenerator-runtime": "^0.13.11",
     "tsc-alias": "^1.8.6",
     "typescript": "^4.9.5",
-    "vite": "^4.3.8",
+    "vite": "4.3.9",
     "vite-plugin-singlefile": "^0.13.5",
     "vue": "3.2.25"
   },
