--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "dependencies": {
     "@types/mime": "^3.0.1",
     "generate-unique-id": "^2.0.1",
-    "jssip": "^3.10.0",
+    "jssip": "3.10.0",
     "loglevel": "^1.8.1",
     "mime": "^3.0.0",
     "p-iteration": "^1.1.8"
