--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@voicenter-team/eslint-config-ts": "^1.0.21",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
     "pre-commit": "^1.2.2",
