--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tsc-alias": "^1.8.6",
     "typescript": "^4.9.5",
     "vite": "4.3.9",
+    "vite-plugin-dts": "^3.6.4",
     "vite-plugin-singlefile": "^0.13.5",
     "vue": "3.2.25"
   },
