--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voicenter-team/opensips-js",
-  "version": "1.0.23",
+  "version": "1.0.33",
   "description": "The JS package for opensips",
   "default": "src/index.ts",
   "jsdelivr": "dist/opensips-js.umd.js",
@@ -47,7 +47,7 @@
     "tsc-alias": "^1.8.6",
     "typescript": "^4.9.5",
     "vite": "4.4.11",
-    "vite-plugin-dts": "^3.6.4",
+    "vite-plugin-dts": "3.5.3",
     "vite-plugin-singlefile": "^0.13.5",
     "vue": "3.2.25"
   },
