--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,20 @@
 {
-  "include": [
-    "src/**/*",
-    "src/**/*.d.ts",
-    "docs/**/*",
-  ],
-  "exclude": ["node_modules"],
   "compilerOptions": {
-    "target": "ES2022" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
-    "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "lib": [
-      "dom",
-      "ESNext"
-    ],
-    "types": [
-      "vite/client",
-      "node"
-    ],
-    "declaration": true, /* Generates corresponding '.d.ts' file. */
-    "esModuleInterop": true,
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    },
-    "useDefineForClassFields": true,
+    "target": "es2017",
+    "module": "ESNext",
+    "moduleResolution": "nodenext",
     "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "isolatedModules": true,
-    "declarationDir": "dist/types",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "importHelpers": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
+    "declaration": true,
+    "esModuleInterop": true,
+    "skipLibCheck": false,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "rootDir": ".",
     "baseUrl": ".",
-  }
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": ["src/*.ts", "src/*.d.ts","src/**/*.ts", "src/**/*.d.ts", "src/**/**/*.ts", "src/**/**/*.d.ts", "src/types/*.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
