--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "jssip": "3.10.0",
     "loglevel": "^1.8.1",
     "mime": "^3.0.0",
-    "p-iteration": "^1.1.8"
+    "p-iteration": "^1.1.8",
+    "sdp-transform": "2.14.1"
   },
   "files": [
     "dist",
