--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ upload_to_s3:
   stage: deploy
   image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
   script:
+    - env
     - aws s3 cp dist/ "s3://$S3_BUCKET_NAME/path/to/destination/" --recursive
   when: manual
   dependencies:
