--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,6 @@ upload_to_s3:
   image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
   when: manual
   script:
-    - aws s3 cp $build_path "s3://$S3_BUCKET_NAME/dist/" --recursive
+    - aws s3 cp $build_path "s3://$S3_BUCKET_NAME/dist/" --recursive --acl public-read
   dependencies:
     - install_and_build
